prevent icon and text overlap before style change before 768px

--- a/services/ui-src/src/styles/_main.scss
+++ b/services/ui-src/src/styles/_main.scss
@@ -309,6 +309,9 @@ img {
           padding: ($padding * 2) ($padding * 5);
           text-align: center;
           width: auto;
+          @media only screen and (min-width: 768px) {
+            padding-right: 2rem;
+          }
         }
       }
 
